# LifeGraph

./: .gitignore  CLAUDE.md  lifegraph.db  lifegraph.db-shm  lifegraph.db-wal  task.md
backend/: _parse_smoketest.py  lifegraph.db  lifegraph.db-shm  lifegraph.db-wal  pyproject.toml  requirements.txt
backend/lifegraph/: __init__.py  __main__.py  api.py  config.py  dashboard.py  domain.py  factory.py  ingest.py  mcp_server.py  ollama_client.py  parser.py  salience.py  search.py  serializer.py  server.py  store.py  validation.py
backend/lifegraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/lifegraph/static/js/: api.js  app.js  contextPanel.js  dashboard.js  graphEditor.js  graphView.js  (+1 more)
backend/lifegraph/templates/: index.html
backend/tests/: salience_corpus.py  test_api.py  test_api_high_degree_property.py  test_api_manual_node_property.py  test_api_nodes_edges.py  test_api_property.py  test_config.py  test_config_property.py  test_dashboard.py  test_dashboard_property.py  test_domain.py  test_ingest.py  test_loopback_property.py  test_mcp_server.py  test_ollama_client.py  test_parser.py  test_parser_property.py  test_salience.py  test_salience_corpus.py  test_salience_property.py  test_search.py  test_search_property.py  test_serializer.py  test_serializer_property.py  test_smoke.py  test_store.py  test_store_apply_proposal.py  test_store_apply_proposal_property.py  test_store_confirm_reject_property.py  test_store_delete_node.py  test_store_edge_write.py  test_store_held.py  test_store_property.py  test_store_write.py  test_validation.py
(+10 files in other folders)
