[project]
name = "lifegraph"
version = "0.1.0"
description = "A fully local, web-based personal knowledge graph system"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0,<4.0",
    "requests>=2.31,<3.0",
    "mcp>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "hypothesis>=6.100,<7.0",
    "pytest-cov>=5.0,<6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
